--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -29,10 +29,13 @@ body{
     background-position: center;
     margin: 0 auto;
 }
-
+.displayProfile{
+    text-decoration: none;
+    color:black;
+}
 
 #conteiner{
-    width:70%;
+    width:80%;
     margin: 0 auto;
     font-family: Times New Roman;
     font-size:85%;
@@ -52,18 +55,33 @@ nav {
     width:100%;
     margin-bottom: 1%;
 }
-h2.title{
+
+div.title{
+    display:inline-block;
     
-    margin:0;
-    width:100%;
+    
+}
+div.title a{
+    display:block;
+    margin:0 auto;
     font-family:font2;
     padding-top:1%;
     padding-bottom:1%;
+    padding-left: 15%;
+    padding-right: 15%;
     background-color:black;
     color:white;
-    font-size:160%;
+    font-size:129%;
+    margin-bottom: -1%;
     font-weight: normal;
     text-align: left;
+    text-decoration: none;
+    
+}
+div.title.position a{
+    font-size:130%;
+    background-color:white;
+    color:black;
 }
 div.bigbox{
     box-shadow:3px 3px 6px black;
@@ -79,21 +97,22 @@ div.bigbox h3{
     font-family:font2;
     font-size: 170%;
     font-weight: normal;
-    margin-top:1%;
+    margin-top:0;
     margin-bottom:0;
 }
-div.bigbox p{
-    
+div.bigbox p.discription{
     margin:0 auto;
     padding:3%;
-    
+    position: relative;
 }
-div.bigbox p:first-letter
+
+div.bigbox p.discription:first-letter
 {
     font-family:akapitowka;
     font-size:400%;
     float:left;
 }
+
 #side_panel{
     float:left;
     width:29%;
